# MLopsHackathon

./: Dockerfile  LICENSE  README.md  pyproject.toml
app/: infer.py
model/: inference.py  kanye_elon_1900.csv  tfidf.pickle  train.py
streamlit_app/: Dockerfile  elon_vs_kanye_app.py
