[tool.poetry]
name = "tweet-classifier"
version = "0.1.0"
description = "Who tweeted this?"
authors = ["AbinavRavi <subramathreya@gmail.com>"]
readme = "README.md"
packages = [{include = "tweet_classifier"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.1"
numpy = "^1.23.4"
pandas = "^1.5.1"
nltk = "^3.7"
uvicorn = "^0.18.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
